[sohan] added: Testing Unit and Integration
