# src/routes/user.route.ts
@@ -1,7 +1,7 @@
 import express, { IRouter } from 'express';
 import userController from '../controllers/user.controller';
 import userValidator from '../validators/user.validator';
-import { userAuth, forgetUserAuth } from '../middlewares/auth.middleware';
+import { userAuth, forgotUser } from '../middlewares/auth.middleware';
 
 class UserRoutes {
   private UserController = new userController();
@@ -10,25 +10,27 @@ class UserRoutes {
 
   constructor() {
     this.routes();
-  }
+  } 
 
   private routes = () => { 
 
-    this.router.post('/signup', this.UserValidator.newUser, this.UserController.register);
+    this.router.get('/', userAuth,  this.UserController.getUser);
+
+    this.router.post('/', this.UserValidator.newUser, this.UserController.register);
     
     this.router.post('/login', this.UserValidator.login, this.UserController.login);
 
-    this.router.get('/', userAuth,  this.UserController.getUser);
+    this.router.put('/', userAuth, this.UserValidator.update, this.UserController.updateUser);
 
-    this.router.put('/update/', userAuth, this.UserValidator.update, this.UserController.updateUser);
+    this.router.put('/password', userAuth, this.UserController.updateUserPassword);
 
-    this.router.put('/change', userAuth, this.UserController.updateUserPassword);
+    this.router.delete('/', userAuth, this.UserController.deleteUser);
 
     /////////////////////////////////////////////////////////////
 
     this.router.post('/forget',  this.UserController.forgetUser);
 
-    this.router.post('/reset', forgetUserAuth, this.UserController.reset);
+    this.router.post('/forget/reset', forgotUser, this.UserController.reset);
 
     ////////////////////////////////////////////////////////////
 
